added some functionality to advance